# acid-world

./: .ghcid  .gitignore  LICENSE  README.md  acid-world.cabal  bench.sh  compile.sh  runBench.sh  runTest.sh  stack.yaml
benchmark/: Benchmark.hs
shared/Shared/: App.hs  Schema.hs  TH.hs
src/Acid/: Core.hs  World.hs
src/Acid/Core/: Backend.hs  CacheState.hs  Event.hs  Inner.hs  Segment.hs  Serialise.hs  State.hs  Utils.hs
src/Acid/Core/Backend/: Abstract.hs  FS.hs  Groundhog.hs  Memory.hs  Postgresql.hs
src/Acid/Core/Inner/: Abstract.hs  PureState.hs
src/Acid/Core/Serialise/: Abstract.hs  CBOR.hs  JSON.hs  Postgresql.hs  SafeCopy.hs
src/Acid/Core/Serialise/JSON/: Partial.hs
src/Acid/Core/State/: Abstract.hs  CacheState.hs  PureState.hs
src/dataFiles/: stateFolderReadMe.md
test/: TH.hs  Test.hs
