name:                acid-world
version:             0.0.0.1
synopsis:            Acid world
description:         Please see README.md
homepage:            http://github.com/matchwood/acid-world#readme
license:             AllRightsReserved
author:              Matchwood
maintainer:          matchwood1@gmail.com
copyright:           2018 Matchwood
category:            Database
build-type:          Simple
cabal-version:       >= 1.24

library
  exposed-modules:
    Acid.World
    Acid.Core
    Acid.Core.Segment
    Acid.Core.Event
    Acid.Core.Utils
    Acid.Core.Serialise
    Acid.Core.Serialise.Abstract
    Acid.Core.Serialise.JSON
    Acid.Core.Serialise.CBOR
  other-modules:
  build-depends:
    base,
    rio,
    generics-sop,
    mtl,
    vinyl,
    aeson,
    stm,
    uuid


  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns

test-suite acid-world-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                       shared
  main-is:             Test.hs
  other-modules:       Shared.TH
                       Shared.App
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       rio
                     , base
                     , acid-world
                     , QuickCheck
                     , criterion
                     , template-haskell
                     , aeson
                     , temporary
                     , generics-sop
                     , basic-sop
                     , quickcheck-instances
                     , ixset-typed
                     , filepath
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns
  ghc-options:
    -O2

benchmark acid-world-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
                       shared
  main-is:             Benchmark.hs
  other-modules:       Shared.TH
                       Shared.App
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       rio
                     , base
                     , acid-world
                     , QuickCheck
                     , criterion
                     , template-haskell
                     , aeson
                     , temporary
                     , generics-sop
                     , basic-sop
                     , quickcheck-instances
                     , ixset-typed
                     , filepath
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns
  ghc-options:
    -O2
source-repository head
  type:     git
  location: https://github.com/matchwood/acid-world
