name:                acid-world
version:             0.0.0.1
synopsis:            Expansion of acid state to cover multiple serialisers, multiple state objects and other useful functionality
description:
    This package expands on the functionality of <https://hackage.haskell.org/package/acid-state acid-state>
    by providing multiple serialisation options, the ability to define multiple root states, an easier, TH-free interface, composable update events, user specified invariant checking as part of atomic updates, and other usability improvements.
    .
    Also included in this package is a key-value backed persistence layer for keyed maps, including indexed maps (eg <https://hackage.haskell.org/package/ixset-typed ixset-typed>). The motivation for this is similar to that behind <https://hackage.haskell.org/package/vcache vcache> - easy persistence and querying of state that is too large to fit in memory. The implementation in this package is not as general as that in vcache, but is hopefully easier to work with for some use cases.

homepage:            http://github.com/matchwood/acid-world#readme
license:             BSD3
license-file:        LICENSE
author:              Matchwood
maintainer:          matchwood1@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >= 1.24
data-files:
  src/dataFiles/*.md

library
  exposed-modules:
    Acid.World
    Acid.Core
    Acid.Core.Segment
    Acid.Core.Utils
    Acid.Core.Serialise
    Acid.Core.Serialise.Abstract
    Acid.Core.Serialise.JSON
    Acid.Core.Serialise.JSON.Partial
    Acid.Core.Serialise.CBOR
    Acid.Core.Serialise.SafeCopy
    Acid.Core.Serialise.Postgresql
    Acid.Core.Backend
    Acid.Core.Backend.Abstract
    Acid.Core.Backend.FS
    Acid.Core.Backend.Memory
    Acid.Core.Backend.Postgresql
    Acid.Core.State
    Acid.Core.State.Abstract
    Acid.Core.State.PureState
    Acid.Core.CacheState
  other-modules:
    Paths_acid_world
  build-depends:
    base,
    bytestring,
    rio,
    generics-sop,
    mtl,
    vinyl,
    aeson,
    stm,
    uuid,
    conduit,
    conduit-extra,
    serialise,
    cborg,
    safecopy,
    cereal,
    zlib,
    attoparsec,
    cryptonite,
    memory,
    crc,
    postgresql-simple,
    lmdb-simple,
    ixset-typed


  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns

test-suite acid-world-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                       shared
  main-is:             Test.hs
  other-modules:       Shared.TH
                       Shared.App
                       Shared.Schema
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       rio
                     , base
                     , acid-world
                     , QuickCheck
                     , criterion
                     , template-haskell
                     , aeson
                     , temporary
                     , generics-sop
                     , basic-sop
                     , quickcheck-instances
                     , ixset-typed
                     , filepath
                     , serialise
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , safecopy
                     , bytestring
                     , postgresql-simple
                     , uuid
                     , postgresql-libpq
                     , deepseq

  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns
  ghc-options:
    -O2

benchmark acid-world-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
                       shared
  main-is:             Benchmark.hs
  other-modules:       Shared.TH
                       Shared.App
                       Shared.Schema
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  build-depends:       rio
                     , base
                     , acid-world
                     , QuickCheck
                     , criterion
                     , template-haskell
                     , aeson
                     , temporary
                     , generics-sop
                     , basic-sop
                     , quickcheck-instances
                     , ixset-typed
                     , filepath
                     , serialise
                     , safecopy
                     , bytestring
                     , postgresql-simple
                     , uuid
                     , postgresql-libpq
                     , lmdb-simple


  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns
  ghc-options:
    -O2
source-repository head
  type:     git
  location: https://github.com/matchwood/acid-world
